--- a/expertise.html
+++ b/expertise.html
@@ -27,6 +27,10 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./dist/output.css" />
     <title>Expertise | Gambit Rojo</title>
   </head>
@@ -609,7 +613,8 @@
     <script src="./src/js/cursor1.js"></script>
     <script src="./src/js/scrollreveal.js"></script>
     <script src="./src/js/navbar.js"></script>
-    <script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
+    <!-- <script src="./node_modules/flowbite/dist/flowbite.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script>
 
     <script>
