--- a/expertise.html
+++ b/expertise.html
@@ -209,7 +209,7 @@
             id="accordion-color"
             data-accordion="collapse"
             data-active-classes="bg-transparent text-white shadow-lg shadow-[#005982] transition duration-300 ease-in-out scale-100 xl:scale-105"
-            class="px-5 xl:px-0 accordion-parent"
+            class="px-5 2xl:px-0 accordion-parent"
           >
             <div id="accordion-color-heading-1" class="relative">
               <button
@@ -444,7 +444,7 @@
       <div
         class="w-full mx-auto lg:max-w-[1150px] 2xl:max-w-[1366px]"
       >
-        <div class="w-full px-5 xl:px-0">
+        <div class="w-full px-5 2xl:px-0">
           <h3
             class="text-center font-outfit font-medium text-[30px] xl:text-[48px] text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] leading-normal mb-[20px] xl:mb-[40px] recent-projects-title"
           >
@@ -522,11 +522,12 @@
 
     <!-- Start a project -->
     <section class="w-full mb-40 text-center">
-      <h1
+      <a
+        href="/about-you.html"
         class="font-outfit font-bold text-6xl xl:text-[96px] text-transparent bg-clip-text bg-gradient-to-b from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] drop-shadow-lg bg-size-200 bg-pos-0 hover:bg-pos-100 transition-all duration-300 leading-normal"
       >
         Start<br />a<br />Project
-      </h1>
+      </a>
     </section>
 
     <!-- Footer goes here -->
