--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 
     <!-- About 3 goes here -->
     <div
-      class="w-full lg:max-w-[1150px] 2xl:max-w-[1366px] mx-auto rellax mt-0 xl:mt-[-100px] px-5 xl:px-0 mb-60 xl:mb-0"
+      class="w-full lg:max-w-[1150px] 2xl:max-w-[1366px] mx-auto rellax mt-0 xl:mt-[-100px] px-5 2xl:px-0 mb-60 xl:mb-0"
       data-rellax-mobile-speed="10"
       data-rellax-desktop-speed="10"
     >
@@ -419,11 +419,12 @@
 
     <!-- Start a project -->
     <section class="w-full mb-40 text-center">
-      <h1
+      <a
+        href="/about-you.html"
         class="font-outfit font-bold text-6xl xl:text-[96px] text-transparent bg-clip-text bg-gradient-to-b from-[#8CDBFF] via-[#00B0FF] to-[#0027AF] drop-shadow-lg bg-size-200 bg-pos-0 hover:bg-pos-100 transition-all duration-300 leading-normal"
       >
         Start<br />a<br />Project
-      </h1>
+      </a>
     </section>
 
     <!-- Footer goes here -->
