--- a/insight.html
+++ b/insight.html
@@ -31,20 +31,24 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/kursor/dist/kursor.css"
+    />
     <link rel="stylesheet" href="./dist/output.css" />
     <title>Insight | Gambit Rojo</title>
   </head>
 
   <body>
     <!-- Custom cursor -->
-    <div
+    <!-- <div
       id="cursor1"
       class="hidden xl:block fixed w-[14px] h-[14px] bg-[#B5FBFF] rounded-full translate-x-[-50%] translate-y-[-50%] pointer-events-none z-50"
     ></div>
     <div
       id="cursor2"
       class="hidden xl:block fixed w-[52px] h-[52px] border-[#258287] border rounded-full translate-x-[-50%] translate-y-[-50%] duration-700 ease-out bg-transparent z-50 pointer-events-none"
-    ></div>
+    ></div> -->
     <div class="w-full relative">
       <div
         class="absolute w-[250px] h-[250px] xl:w-[500px] 2xl:w-[700px] 2xl:h-[700px] xl:h-[500px] bg-blue-800 z-[-1] top-[5%] xl:top-[8%] left-[0%] xl:left-[5%] -translate-x-[0%] -translate-y-[50%] rounded-full blur-[64px] xl:blur-[186px] opacity-[1] animate-pulse rellax"
@@ -961,7 +965,7 @@
               <img
                 src="./src/assets/icons/instagram.svg"
                 alt="instagram"
-                class="w-[33px] xl:w-[48px]"
+                class="w-[28px] xl:w-[40px]"
               />
             </a>
             <a href="#" class="cursor-none">
@@ -1005,20 +1009,26 @@
     </script>
     <!--End of Tawk.to Script-->
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.js"></script>
-    <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/kursor@0.0.14/dist/kursor.js"></script>
     <script src="src/js/blog-filter.js"></script>
     <script src="src/js/pagination.js"></script>
     <script src="./src/js/cursor1.js"></script>
     <script src="./src/js/scrollreveal.js"></script>
     <script src="./src/js/navbar.js"></script>
-    <!-- <script src="./node_modules/flowbite/dist/flowbite.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.7.0/flowbite.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script>
 
     <script>
       var rellax = new Rellax('.rellax', {
         center: true,
+      });
+    </script>
+
+    <script>
+      new kursor({
+        type: 4,
+        removeDefaultCursor: true,
+        color: '#B5FBFF',
       });
     </script>
   </body>
