--- a/expertise.html
+++ b/expertise.html
@@ -181,10 +181,11 @@
               <p
                 class="font-inter font-normal text-[#CECECE] text-[20px] xl:text-[22px] 2xl:text-[24px] text-left opacity-[0.5]"
               >
-                Lorem ipsum dolor sit amet consectetur. Dictum lorem
-                egestas dui aliquam. Elementum nulla in eget massa
-                morbi eget. Fermentum suspendisse lorem volutpat nulla
-                id id dis tincidunt.
+                At our branding agency, our utmost priority is to
+                cater to your unique needs and aspirations. We take
+                pride in offering a diverse range of services that are
+                tailored specifically to your brand's vision and
+                objectives.
               </p>
             </div>
           </div>
@@ -215,6 +216,81 @@
             data-active-classes="bg-transparent text-white shadow-lg shadow-[#005982] transition duration-300 ease-in-out scale-100 xl:scale-105"
             class="px-5 2xl:px-0 accordion-parent"
           >
+            <div id="accordion-color-heading-2" class="relative">
+              <button
+                type="button"
+                class="relative flex items-center justify-center w-full p-5 overflow-hidden font-medium text-left bg-transparent xl:justify-between py-7 cursor-none"
+                data-accordion-target="#accordion-color-body-2"
+                aria-expanded="false"
+                aria-controls="accordion-color-body-2"
+              >
+                <div
+                  class="absolute top-0 left-0 z-0 w-full h-full bg-neutral-900 bg-opacity-70"
+                ></div>
+                <div
+                  class="absolute w-full h-full left-0 top-0 z-[-1] bg-[url('https://images.unsplash.com/photo-1533750349088-cd871a92f312?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=50')] bg-cover bg-center"
+                ></div>
+                <span
+                  class="font-semibold font-outfit text-3xl xl:text-3xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] to-[#00B0FF] z-[1] whitespace-nowrap"
+                  >Branding Strategy</span
+                >
+                <svg
+                  data-accordion-icon
+                  class="hidden w-3 h-3 rotate-180 shrink-0 xl:block"
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 10 6"
+                >
+                  <path
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M9 5 5 1 1 5"
+                  />
+                </svg>
+              </button>
+            </div>
+            <div
+              id="accordion-color-body-2"
+              class="hidden w-full mt-8"
+              aria-labelledby="accordion-color-heading-2"
+            >
+              <div
+                class="grid items-start w-full grid-cols-1 gap-10 xl:grid-cols-3"
+              >
+                <div
+                  class="order-first relative w-full xl:order-last"
+                >
+                  <img
+                    src="./src/assets/images/digital-marketing.jpg"
+                    alt="digital-marketing"
+                    class="w-full grayscale brightness-75"
+                  />
+                </div>
+                <div class="w-full xl:col-span-2">
+                  <p
+                    class="font-inter text-[#A7A7A7] font-normal text-2xl leading-[1.7] 2xl:leading-[2]"
+                  >
+                    Our brand strategy encompasses a multi-dimensional
+                    approach, encompassing everything from marketing
+                    channels to customer engagement tactics. By
+                    integrating
+                    <span class="text-[#00B0FF] font-medium"
+                      >customer research, brand identity, and brand
+                      strategy</span
+                    >
+                    seamlessly, we ensure your brand stands out in
+                    today's competitive landscape and forges enduring
+                    connections with your customers. Let us transform
+                    your brand into a powerful force that drives
+                    growth and success.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="w-full h-1 bg-[#47ABD8] my-8"></div>
             <div id="accordion-color-heading-1" class="relative">
               <button
                 type="button"
@@ -227,7 +303,7 @@
                   class="absolute top-0 left-0 z-0 w-full h-full bg-neutral-900 bg-opacity-70"
                 ></div>
                 <div
-                  class="absolute w-full h-full left-0 top-0 z-[-1] bg-[url('https://images.unsplash.com/photo-1457305237443-44c3d5a30b89?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1474&q=80')] bg-cover bg-center"
+                  class="absolute w-full h-full left-0 top-0 z-[-1] bg-[url('https://images.unsplash.com/photo-1457305237443-44c3d5a30b89?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=50')] bg-cover bg-center"
                 ></div>
                 <span
                   class="font-semibold font-outfit text-3xl xl:text-3xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] to-[#00B0FF] z-[1] whitespace-nowrap"
@@ -259,101 +335,27 @@
               <div
                 class="grid items-start w-full gap-10 xl:grid-cols-3"
               >
-                <div class="w-full bg-transparent xl:col-span-2">
-                  <p
-                    class="font-inter text-[#A7A7A7] font-normal text-2xl leading-[1.7] 2xl:leading-[2]"
-                  >
-                    Lorem ipsum dolor sit amet consectetur,
-                    adipisicing elit. Magni illo voluptatibus rem aut
-                    ad? Nam id fuga voluptate sunt sapiente numquam
-                    recusandae voluptas ex sequi quae autem inventore
-                    dolores officia facere rerum dolore eos tenetur
-                    excepturi cupiditate explicabo, asperiores
-                    debitis. Illum veniam nemo similique error quaerat
-                    quae nihil rem excepturi aspernatur mollitia
-                    reprehenderit tempora, voluptatum, officiis ad
-                    animi vero fuga, consectetur velit placeat cum
-                    distinctio dolorum?
-                  </p>
-                </div>
-                <div
-                  class="order-first w-full bg-transparent xl:order-last"
-                >
+                <div class="w-full bg-transparent">
                   <img
                     src="./src/assets/images/web-dev.jpg"
                     alt="web-dev"
                     class="w-full grayscale brightness-75"
                   />
                 </div>
-              </div>
-            </div>
-            <div class="w-full h-1 bg-[#47ABD8] my-8"></div>
-            <div id="accordion-color-heading-2" class="relative">
-              <button
-                type="button"
-                class="relative flex items-center justify-center w-full p-5 overflow-hidden font-medium text-left bg-transparent xl:justify-between py-7 cursor-none"
-                data-accordion-target="#accordion-color-body-2"
-                aria-expanded="false"
-                aria-controls="accordion-color-body-2"
-              >
-                <div
-                  class="absolute top-0 left-0 z-0 w-full h-full bg-neutral-900 bg-opacity-70"
-                ></div>
-                <div
-                  class="absolute w-full h-full left-0 top-0 z-[-1] bg-[url('https://images.unsplash.com/photo-1533750349088-cd871a92f312?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80')] bg-cover bg-center"
-                ></div>
-                <span
-                  class="font-semibold font-outfit text-3xl xl:text-3xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] to-[#00B0FF] z-[1] whitespace-nowrap"
-                  >Digital Marketing</span
-                >
-                <svg
-                  data-accordion-icon
-                  class="hidden w-3 h-3 rotate-180 shrink-0 xl:block"
-                  aria-hidden="true"
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 10 6"
-                >
-                  <path
-                    stroke="currentColor"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M9 5 5 1 1 5"
-                  />
-                </svg>
-              </button>
-            </div>
-            <div
-              id="accordion-color-body-2"
-              class="hidden w-full mt-8"
-              aria-labelledby="accordion-color-heading-2"
-            >
-              <div
-                class="grid items-start w-full grid-cols-1 gap-10 xl:grid-cols-3"
-              >
-                <div class="relative w-full">
-                  <img
-                    src="./src/assets/images/digital-marketing.jpg"
-                    alt="digital-marketing"
-                    class="w-full grayscale brightness-75"
-                  />
-                </div>
-                <div class="w-full xl:col-span-2">
+                <div class="w-full bg-transparent xl:col-span-2">
                   <p
                     class="font-inter text-[#A7A7A7] font-normal text-2xl leading-[1.7] 2xl:leading-[2]"
                   >
-                    Lorem ipsum dolor sit amet consectetur,
-                    adipisicing elit. Magni illo voluptatibus rem aut
-                    ad? Nam id fuga voluptate sunt sapiente numquam
-                    recusandae voluptas ex sequi quae autem inventore
-                    dolores officia facere rerum dolore eos tenetur
-                    excepturi cupiditate explicabo, asperiores
-                    debitis. Illum veniam nemo similique error quaerat
-                    quae nihil rem excepturi aspernatur mollitia
-                    reprehenderit tempora, voluptatum, officiis ad
-                    animi vero fuga, consectetur velit placeat cum
-                    distinctio dolorum?
+                    With our website development services, you can
+                    confidently showcase your brand, captivate your
+                    audience, and achieve your online goals with
+                    exceptional ease. Elevate your website presence
+                    today with our winning combination of
+                    <span class="text-[#00B0FF] font-medium"
+                      >website building, keyword research, and
+                      SEO</span
+                    >
+                    expertise!
                   </p>
                 </div>
               </div>
@@ -371,11 +373,11 @@
                   class="absolute top-0 left-0 z-0 w-full h-full bg-neutral-900 bg-opacity-70"
                 ></div>
                 <div
-                  class="absolute w-full h-full left-0 top-0 z-[-1] bg-[url('https://images.unsplash.com/photo-1579869847557-1f67382cc158?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1634&q=80')] bg-cover bg-center"
+                  class="absolute w-full h-full left-0 top-0 z-[-1] bg-[url('https://images.unsplash.com/photo-1579869847557-1f67382cc158?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=50')] bg-cover bg-center"
                 ></div>
                 <span
                   class="font-semibold font-outfit text-2xl xl:text-3xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] to-[#00B0FF] z-[1] whitespace-nowrap"
-                  >Social Media Optimization</span
+                  >Social Media</span
                 >
                 <svg
                   data-accordion-icon
@@ -407,17 +409,20 @@
                   <p
                     class="font-inter text-[#A7A7A7] font-normal text-2xl leading-[1.7] 2xl:leading-[2]"
                   >
-                    Lorem ipsum dolor sit amet consectetur,
-                    adipisicing elit. Magni illo voluptatibus rem aut
-                    ad? Nam id fuga voluptate sunt sapiente numquam
-                    recusandae voluptas ex sequi quae autem inventore
-                    dolores officia facere rerum dolore eos tenetur
-                    excepturi cupiditate explicabo, asperiores
-                    debitis. Illum veniam nemo similique error quaerat
-                    quae nihil rem excepturi aspernatur mollitia
-                    reprehenderit tempora, voluptatum, officiis ad
-                    animi vero fuga, consectetur velit placeat cum
-                    distinctio dolorum?
+                    To take your social media efforts to the next
+                    level, our creative minds design and execute
+                    compelling digital campaigns that captivate your
+                    followers and attract new customers. Through
+                    seamless integration of
+                    <span class="text-[#00B0FF] font-medium"
+                      >social media management, ads management, and
+                      digital campaigns,</span
+                    >
+                    we forge a powerful digital presence that helps
+                    your brand thrive in the dynamic social landscape.
+                    Let us be your social media partner, delivering
+                    unparalleled results and unlocking the true
+                    potential of your brand in the digital age.
                   </p>
                 </div>
                 <div
@@ -428,6 +433,83 @@
                     alt="social-media-opt"
                     class="w-full grayscale brightness-75"
                   />
+                </div>
+              </div>
+            </div>
+            <div class="w-full h-1 bg-[#47ABD8] my-8"></div>
+            <div id="accordion-color-heading-4" class="relative">
+              <button
+                type="button"
+                class="relative flex items-center justify-center w-full p-5 overflow-hidden font-medium text-left bg-transparent xl:justify-between py-7 cursor-none"
+                data-accordion-target="#accordion-color-body-4"
+                aria-expanded="false"
+                aria-controls="accordion-color-body-2"
+              >
+                <div
+                  class="absolute top-0 left-0 z-0 w-full h-full bg-neutral-900 bg-opacity-70"
+                ></div>
+                <div
+                  class="absolute w-full h-full left-0 top-0 z-[-1] bg-[url('https://images.unsplash.com/photo-1607252650355-f7fd0460ccdb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=50')] bg-cover bg-center"
+                ></div>
+                <span
+                  class="font-semibold font-outfit text-3xl xl:text-3xl text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] to-[#00B0FF] z-[1] whitespace-nowrap"
+                  >Mobile Apps Development</span
+                >
+                <svg
+                  data-accordion-icon
+                  class="hidden w-3 h-3 rotate-180 shrink-0 xl:block"
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 10 6"
+                >
+                  <path
+                    stroke="currentColor"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M9 5 5 1 1 5"
+                  />
+                </svg>
+              </button>
+            </div>
+            <div
+              id="accordion-color-body-4"
+              class="hidden w-full mt-8"
+              aria-labelledby="accordion-color-heading-4"
+            >
+              <div
+                class="grid items-start w-full grid-cols-1 gap-10 xl:grid-cols-3"
+              >
+                <div class="relative w-full">
+                  <img
+                    src="./src/assets/images/mobile.jpg"
+                    alt="digital-marketing"
+                    class="w-full grayscale brightness-75"
+                  />
+                </div>
+                <div class="w-full xl:col-span-2">
+                  <p
+                    class="font-inter text-[#A7A7A7] font-normal text-2xl leading-[1.7] 2xl:leading-[2]"
+                  >
+                    We offer two powerful avenues for app creation to
+                    suit your unique requirements. Our
+                    <span class="text-[#00B0FF] font-medium"
+                      >native Android app development</span
+                    >
+                    leverages the full potential of the Android
+                    platform, providing a seamless and optimized user
+                    experience that harnesses the device's
+                    capabilities to the fullest. Alternatively, our
+                    <span class="text-[#00B0FF] font-medium"
+                      >cross-platform app development</span
+                    >
+                    offers versatility and cost-effectiveness. By
+                    using cutting-edge technologies like React Native
+                    or Flutter, we develop apps that run smoothly
+                    across multiple platforms without compromising on
+                    performance or user experience.
+                  </p>
                 </div>
               </div>
             </div>
@@ -467,8 +549,7 @@
                 <p
                   class="text-[#CECECE] font-inter text-base xl:text-xl font-normal"
                 >
-                  Lorem ipsum dolor sit amet consectetur. Mauris diam
-                  vitae cursus sit luctus cursus.
+                  Creating a better online presence for tax industry.
                 </p>
               </div>
               <div
@@ -514,8 +595,8 @@
                 <p
                   class="text-[#CECECE] font-inter text-base xl:text-xl font-normal"
                 >
-                  Lorem ipsum dolor sit amet consectetur. Mauris diam
-                  vitae cursus sit luctus cursus.
+                  Creating a better online presence for private
+                  medical trading company.
                 </p>
               </div>
             </div>
