Revert "Update content"
This reverts commit f54fefb0450eec5fbdd1d3b61bea78b9036c3835.

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 
     <div class="relative w-full">
       <div
-        class="absolute w-[300px] h-[300px] xl:w-[600px] 2xl:w-[1000px] 2xl:h-[1000px] xl:h-[600px] bg-blue-800 z-[-1] top-[0%] left-[0%] -translate-x-[50%] -translate-y-[50%] rounded-full blur-[180px] opacity-[1]"
+        class="absolute w-[300px] h-[300px] xl:w-[500px] 2xl:w-[700px] 2xl:h-[700px] xl:h-[500px] bg-blue-800 z-[-1] top-[50%] left-[40%] -translate-x-[50%] -translate-y-[50%] rounded-full blur-[156px] opacity-[1] animate-pulse"
       ></div>
       <div
-        class="absolute w-[200px] h-[200px] xl:w-[400px] 2xl:w-[600px] 2xl:h-[600px] xl:h-[400px] bg-[#00B0FF] z-[-1] top-[50%] left-[30%] -translate-x-[50%] -translate-y-[50%] rounded-full blur-[156px] opacity-[1] 2xl:blur-[192px]"
+        class="absolute w-[200px] h-[200px] xl:w-[300px] 2xl:w-[400px] 2xl:h-[400px] xl:h-[300px] bg-[#00B0FF] z-[-1] top-[50%] left-[65%] -translate-x-[50%] -translate-y-[50%] rounded-full blur-[128px] opacity-[1] animate-pulse2"
       ></div>
       <!-- Navbar goes here -->
       <div
@@ -152,24 +152,24 @@
           class="w-full h-[50vh] md:h-[90vh] text-center relative flex flex-col justify-center overflow-x-hidden"
         >
           <div
-            class="w-full mx-auto lg:max-w-[1150px] 2xl:max-w-[1366px] relative flex flex-col text-left px-5 2xl:px-0"
+            class="w-full mx-auto lg:max-w-[1150px] 2xl:max-w-[1366px] relative flex flex-col text-center"
           >
             <h1
-              class="hero-item font-inter font-semibold text-white text-[22px] sm:text-[68px] xl:text-[64px] 2xl:text-[82px] leading-[1.2] drop-shadow-lg mb-[-10px] xl:mb-[-50px] mt-[-82px] xl:mt-[-72px]"
+              class="hero-item font-inter font-thin text-white text-[34px] sm:text-[68px] xl:text-[110px] 2xl:text-[135px] leading-[15px] drop-shadow-xl shadow-white"
             >
-              Creating Captivating<br />Immersive Narratives with
+              We are a Social Media
             </h1>
             <h1
-              class="whitespace-nowrap hero-item2 text-bg font-outfit font-black text-6xl sm:text-[96px] xl:text-[180px] 2xl:text-[224px] leading-normal text-transparent bg-clip-text bg-[length:120%_120%] bg-[url('https://images.unsplash.com/photo-1561211919-1947abbbb35b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=871&q=80')] relative overflow-visible drop-shadow-lg"
+              class="hero-item2 text-bg font-outfit font-black text-5xl sm:text-[96px] xl:text-[160px] 2xl:text-[190px] leading-normal text-transparent bg-clip-text bg-[length:120%_120%] bg-[url('https://images.unsplash.com/photo-1561211919-1947abbbb35b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=871&q=80')] relative overflow-visible drop-shadow-lg"
             >
-              Technology
+              Digital Agency
             </h1>
 
-            <!-- <img
+            <img
               src="./src/assets/images/logo-3d-transparent.png"
               alt="logo-transparent"
               class="absolute top-[40%] left-[50%] -translate-x-[50%] -translate-y-[50%] z-[-1] opacity-[0.2] w-56 xl:w-[30vw]"
-            /> -->
+            />
           </div>
           <div
             class="absolute bottom-[30px] overflow-x-visible hero-item3"
@@ -179,22 +179,30 @@
                 <p
                   class="font-inter font-light text-white text-lg xl:text-[2vw]"
                 >
-                  Here`s Gambit Rojo, we are a bunch of innovators and
-                  digital marketers enthusiast who gladly handle your
-                  brand. We believe that every brand is unique and has
-                  a different identity.
+                  Lorem ipsum dolor sit amet consectetur, adipisicing
+                  elit. Suscipit blanditiis nesciunt dolorum iure nam
+                  voluptatum nulla vel corporis earum error, optio
+                  dolores. Impedit ipsam placeat, quia, illo expedita
+                  ducimus ex minima sint quod beatae doloribus.
+                  Nostrum dicta animi dolores odit nemo aperiam quidem
+                  alias corrupti aliquid iste, asperiores quaerat
+                  accusamus!
                 </p>
               </div>
               <div
                 class="absolute top-0 z-0 animate-marquee2 whitespace-nowrap"
               >
                 <p
-                  class="font-inter font-light text-white text-lg xl:text-[2vw] mx-2"
+                  class="font-inter font-light text-white text-lg xl:text-[2vw]"
                 >
-                  Here`s Gambit Rojo, we are a bunch of innovators and
-                  digital marketers enthusiast who gladly handle your
-                  brand. We believe that every brand is unique and has
-                  a different identity.
+                  Lorem ipsum dolor sit amet consectetur, adipisicing
+                  elit. Suscipit blanditiis nesciunt dolorum iure nam
+                  voluptatum nulla vel corporis earum error, optio
+                  dolores. Impedit ipsam placeat, quia, illo expedita
+                  ducimus ex minima sint quod beatae doloribus.
+                  Nostrum dicta animi dolores odit nemo aperiam quidem
+                  alias corrupti aliquid iste, asperiores quaerat
+                  accusamus!
                 </p>
               </div>
             </div>
@@ -236,16 +244,12 @@
             </h3>
           </div>
         </div>
-        <div
-          class="flex items-center w-full px-5 justify-center md:px-0"
-        >
+        <div class="flex items-center w-full px-5 md:px-0">
           <p
-            class="text-2xl font-light text-white font-inter text-left xl:w-[70%]"
+            class="text-2xl font-light text-center text-white font-inter md:text-left"
           >
-            Branding agency based on South Jakarta. Here`s Gambit
-            Rojo, we are a bunch of innovators and digital marketers
-            enthusiast who gladly handle your brand. We believe that
-            every brand is unique and has a different identity.
+            Lorem ipsum dolor sit amet consectetur. Id risus auctor
+            malesuada natoque arcu elementum at nibh hac.
           </p>
         </div>
       </div>
@@ -283,24 +287,21 @@
               data-rellax-mobile-speed="-8"
               data-rellax-desktop-speed="-3"
             >
-              At Gambit Rojo, we believe that
-              <span
-                class="whitespace-nowrap relative text-white about-unique"
-                >a successful brand
+              Lorem ipsum
+              <span class="relative text-white about-unique"
+                >dolor sit
               </span>
-              is like a well-executed
-              <span
-                class="whitespace-nowrap relative text-white about-unique"
-                >chess game</span
+              amet consectetur. Lacinia nulla lectus in
+              <span class="relative text-white about-unique"
+                >ornare orci.</span
               >
-              — a harmonious blend of analysis, positioning, and
-              <span
-                class="whitespace-nowrap relative text-white about-unique"
-                >creativity.</span
+              Pulvinar ligula tristique pellentesque
+              <span class="relative text-white about-unique"
+                >fermentum au.</span
               >
             </p>
             <div
-              class="flex items-center gap-3 rellax absolute bottom-[-510px] xl:bottom-[-350px]"
+              class="flex items-center gap-3 rellax absolute bottom-[-450px] xl:bottom-[-350px]"
               data-rellax-speed="1"
               data-rellax-mobile-speed="3"
               data-rellax-desktop-speed="1"
@@ -308,7 +309,7 @@
               <h3
                 class="font-inter text-white font-medium text-3xl xl:text-4xl transition duration-300 hover:text-[#00B0FF]"
               >
-                See our services
+                See our products
               </h3>
               <img
                 src="./src/assets/icons/arrow-right.svg"
@@ -377,16 +378,14 @@
           <h1
             class="text-5xl font-bold text-white font-outfit xl:text-6xl"
           >
-            Understanding
+            Longevity
           </h1>
         </div>
         <div class="w-full xl:w-[55%] flex items-center">
           <p class="font-inter font-normal text-[#A7A7A7] text-2xl">
-            We take the time to understand your brand's unique
-            position, target audience, and market dynamics, enabling
-            us to develop a winning strategy that will set you apart
-            from your competitors. Just like a chess grandmaster
-            approaches a game.
+            Lorem ipsum dolor sit amet consectetur. Lacinia nulla
+            lectus in ornare orci. Pulvinar ligula tristique
+            pellentesque fermentum au.
           </p>
         </div>
       </div>
@@ -397,15 +396,14 @@
           <p
             class="text-5xl font-bold text-white font-outfit xl:text-6xl"
           >
-            Imaginative
+            Partnership & Collaboration
           </p>
         </div>
         <div class="w-full xl:w-[55%] flex items-center">
           <p class="font-inter font-normal text-[#A7A7A7] text-2xl">
-            We stay up-to-date with the latest industry trends,
-            consumer behavior, and emerging technologies, enabling us
-            to adapt our approach and keep your brand ahead of the
-            curve.
+            Lorem ipsum dolor sit amet consectetur. Lacinia nulla
+            lectus in ornare orci. Pulvinar ligula tristique
+            pellentesque fermentum au.
           </p>
         </div>
       </div>
@@ -416,15 +414,14 @@
           <h1
             class="text-5xl font-bold text-white font-outfit xl:text-6xl"
           >
-            Evolve
+            Longevity
           </h1>
         </div>
         <div class="w-full xl:w-[55%] flex items-center">
           <p class="font-inter font-normal text-[#A7A7A7] text-2xl">
-            Just like people, a brand needs to breathe, grow, and
-            evolve. We will make decision based on relevant data,
-            establish your presence then let`s celebrate your
-            milestone and evolve!
+            Lorem ipsum dolor sit amet consectetur. Lacinia nulla
+            lectus in ornare orci. Pulvinar ligula tristique
+            pellentesque fermentum au.
           </p>
         </div>
       </div>
