--- a/about-you.html
+++ b/about-you.html
@@ -63,7 +63,7 @@
         id="backbone"
       ></div>
       <nav
-        class="w-full top-0 left-0 z-20 relative transition duration-500 ease-in-out"
+        class="relative top-0 left-0 z-20 w-full transition duration-500 ease-in-out"
         id="navbar"
       >
         <div
@@ -104,7 +104,7 @@
             id="navbar-default"
           >
             <ul
-              class="flex flex-col mt-4 text-xl font-medium tracking-widest uppercase md:p-0 bg-transparent md:flex-row md:space-x-8 md:mt-0 md:border-0"
+              class="flex flex-col mt-4 text-xl font-medium tracking-widest uppercase bg-transparent md:p-0 md:flex-row md:space-x-8 md:mt-0 md:border-0"
             >
               <li>
                 <a
@@ -117,7 +117,7 @@
               <li>
                 <a
                   href="/expertise.html"
-                  class="block py-2 pl-3 pr-4 text-white md:border-0 md:p-0 font-normal cursor-none md:bg-transparent"
+                  class="block py-2 pl-3 pr-4 font-normal text-white md:border-0 md:p-0 cursor-none md:bg-transparent"
                   >Expertise</a
                 >
               </li>
@@ -148,16 +148,16 @@
           class="w-full lg:max-w-[900px] 2xl:max-w-[1280px] min-h-[100vh] relative flex-col justify-end overflow-hidden grid grid-cols-1 lg:grid-cols-3 gap-16 2xl:gap-32 mx-auto"
         >
           <div
-            class="form-box col-span-2 justify-center w-full mx-auto relative items-center mb-40 order-2 lg:order-1"
+            class="relative items-center justify-center order-2 w-full col-span-2 mx-auto mb-40 form-box lg:order-1"
           >
             <h1
               class="whitespace-nowrap hidden lg:block font-inter font-extralight text-white text-[34px] sm:text-[68px] xl:text-[72px] 2xl:text-[108px] drop-shadow-xl shadow-white text-left leading-[1] mb-14 xl:mb-32 2xl:mb-40"
             >
-              Let`s start a <br />
+              Unlock the <br>true potential <br />
               <span
                 class="whitespace-nowrap font-outfit font-bold text-transparent bg-clip-text bg-gradient-to-r from-[#8CDBFF] via-[#00B0FF] to-[#0027AF]"
               >
-                project together.
+              of your brand.
               </span>
             </h1>
 
@@ -253,7 +253,7 @@
           <div
             class="form-box flex flex-col items-start justify-start w-full order-1 lg:order-2 pt-0 xl:pt-[120px] 2xl:pt-[220px] overflow-hidden"
           >
-            <div class="lg:hidden flex flex-col items-start mb-10">
+            <div class="flex flex-col items-start mb-10 lg:hidden">
               <div class="flex items-center gap-3 mb-[-16px]">
                 <img
                   src="./src/assets/images/logo-3d-transparent.png"
