Adding About Us Page

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         id="backbone"
       ></div>
       <nav
-        class="w-full top-0 left-0 z-20 relative transition duration-500 ease-in-out"
+        class="relative top-0 left-0 z-20 w-full transition duration-500 ease-in-out"
         id="navbar"
       >
         <div
@@ -110,7 +110,7 @@
             id="navbar-default"
           >
             <ul
-              class="flex flex-col mt-4 text-xl font-medium tracking-widest uppercase md:p-0 md:flex-row bg-transparent md:space-x-8 md:mt-0 md:border-0"
+              class="flex flex-col mt-4 text-xl font-medium tracking-widest uppercase bg-transparent md:p-0 md:flex-row md:space-x-8 md:mt-0 md:border-0"
             >
               <li>
                 <a
@@ -179,10 +179,12 @@
                 <p
                   class="font-inter font-light text-white text-lg xl:text-[2vw]"
                 >
-                  Here`s Gambit Rojo, we are a bunch of innovators and
-                  digital marketers enthusiast who gladly handle your
-                  brand. We believe that every brand is unique and has
-                  a different identity.
+                · Social media management
+                · Digital advertising
+                · Branding strategy
+                · Website development
+                · App development
+                · Brand activation
                 </p>
               </div>
               <div
@@ -191,10 +193,12 @@
                 <p
                   class="font-inter font-light text-white text-lg xl:text-[2vw] mx-2"
                 >
-                  Here`s Gambit Rojo, we are a bunch of innovators and
-                  digital marketers enthusiast who gladly handle your
-                  brand. We believe that every brand is unique and has
-                  a different identity.
+                · Social media management
+                · Digital advertising
+                · Branding strategy
+                · Website development
+                · App development
+                · Brand activation
                 </p>
               </div>
             </div>
@@ -237,7 +241,7 @@
           </div>
         </div>
         <div
-          class="flex items-center w-full px-5 justify-center md:px-0"
+          class="flex items-center justify-center w-full px-5 md:px-0"
         >
           <p
             class="text-2xl font-light text-white font-inter text-left xl:w-[70%]"
@@ -285,17 +289,17 @@
             >
               At Gambit Rojo, we believe that
               <span
-                class="whitespace-nowrap relative text-white about-unique"
+                class="relative text-white whitespace-nowrap about-unique"
                 >a successful brand
               </span>
               is like a well-executed
               <span
-                class="whitespace-nowrap relative text-white about-unique"
+                class="relative text-white whitespace-nowrap about-unique"
                 >chess game</span
               >
               — a harmonious blend of analysis, positioning, and
               <span
-                class="whitespace-nowrap relative text-white about-unique"
+                class="relative text-white whitespace-nowrap about-unique"
                 >creativity.</span
               >
             </p>
